--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="converter.js"></script>
     <script>
       if('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('sw.js', { scope: 'https://yaelgf.github.io/PWAs/MysamplePWA' });
+        navigator.serviceWorker.register('sw.js', { scope: 'https://yaelgf.github.io/PWAExampleMicrosoft/' });
       }
       </script>
   </body>
